[project]
name = "hrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argdantic>=1.3.3",
    "einops>=0.8.1",
    "flax>=0.11.1",
    "huggingface-hub>=0.34.4",
    "jax[cuda12]>=0.7.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "scipy>=1.16.1",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
]
